# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import hotelsRouter from "./hotels";
+import roomsRouter from "./rooms";
+import bookingsRouter from "./bookings";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(hotelsRouter);
+router.use(roomsRouter);
+router.use(bookingsRouter);
 
 export default router;
